--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.3",
+    "@prisma/client": "^3.12.0",
     "mysql": "^2.18.1",
     "next": "12.1.0",
-    "next-auth": "^4.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
@@ -20,6 +21,7 @@
     "@types/react": "17.0.39",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
+    "prisma": "^3.12.0",
     "typescript": "4.6.2"
   }
 }
