--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^3.12.0",
     "mysql": "^2.18.1",
     "next": "12.1.0",
+    "next-auth": "^4.3.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
