--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^3.12.0",
+    "bootstrap": "^5.1.3",
     "mysql": "^2.18.1",
     "next": "12.1.0",
     "next-auth": "^4.3.2",
