--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^3.12.0",
+    "@types/formidable": "^2.0.5",
     "bootstrap": "^5.1.3",
+    "formidable": "^2.0.1",
     "mysql": "^2.18.1",
     "next": "12.1.0",
     "next-auth": "^4.3.2",
