--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^3.12.0",
+    "@types/archiver": "^5.3.1",
     "@types/formidable": "^2.0.5",
+    "archiver": "^5.3.1",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "formidable": "^2.0.1",
+    "js-file-download": "^0.4.12",
     "mysql": "^2.18.1",
     "next": "12.1.0",
     "next-auth": "^4.3.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "superjson": "^1.9.1"
   },
   "devDependencies": {
     "@types/node": "17.0.21",
